# MFR2021

./: .gitattributes  example3.html  text1.txt
2021/: text1.txt
2022/ApplicationG/repeat/p1349variableArgs/: CMakeLists.txt  Makefile
Account/: Account  Account.cpp
ApplicationG/1358signals/: CMakeLists.txt
ApplicationG/1361goto/: CMakeLists.txt
ApplicationG/1361goto/buildNinja/: .ninja_deps  CMakeCache.txt
ApplicationG/1364unions/: 1364  1364.d  CMakeLists.txt
ApplicationG/1364unions/buildNinja/: .ninja_deps  CMakeCache.txt  build.ninja  cmake_install.cmake
ApplicationG/p1371exersises/G2volatileArgs/: 1371.d  CMakeLists.txt  Makefile
ApplicationG/p1371exersises/G2volatileArgs/buildNinja/: .ninja_deps  .ninja_log
ApplicationG/repeat/1355exitAtexit/: 1355.cpp  CMakeLists.txt
ApplicationG/repeat/commLineArgs/: 1351  1351.cpp  1351.d  CMakeLists.txt  outFile.txt
BPCE/: BPCE.vcxproj  (+12 more)
CMakeProjects/Chapter23/p1322complicateInheritance/: 1322.cpp  CMakeLists.txt  Derived.d  Makefile
CMakeProjects/Chapter23/p1322complicateInheritance/Ancestors/: Base1.h  Base2.h  CMakeLists.txt  Derived.cpp  Derived.h
CMakeProjects/Chapter23/p1322complicateInheritance/buildMinGW/: CMakeCache.txt  Makefile  cmake_install.cmake
CMakeProjects/Chapter23/p1322complicateInheritance/buildMinGW/Ancestors/: Makefile  cmake_install.cmake
CMakeProjects/Chapter23/p1329rhombusInharitance/: 1329.cpp  CMakeLists.txt  Makefile
CMakeProjects/Chapter23/p1329rhombusInharitance/buildMinGW/: CMakeCache.txt  Makefile  cmake_install.cmake
CMakeProjects/Chapter23/p1329rhombusInharitance/buildMinGW/headerLib/: Makefile  cmake_install.cmake
CMakeProjects/Chapter23/p1329rhombusInharitance/headerLib/: Base.h  CMakeLists.txt
CMakeProjects/Chapter5/ex5_24/: 5_24.cpp  5_24.d  CMakeLists.txt  Makefile  config.h
CMakeProjects/Chapter5/ex5_24/buildMinGW/: CMakeCache.txt  Makefile  cmake_install.cmake
CMakeProjects/Chapter5/ex5_29/: 5_29.cpp  5_29.d  CMakeLists.txt  Makefile
CMakeProjects/Chapter5/ex5_29/buildMGW/: CMakeCache.txt  Makefile  cmake_install.cmake
CMakeProjects/Chapter6/ex6.26/: 6_26.cpp  6_26.d  CMakeLists.txt  Makefile
CMakeProjects/Chapter6/ex6.26/buildMGW/: CMakeCache.txt  Makefile  cmake_install.cmake
CMakeProjects/Chapter6/ex6_34/: 6_34.cpp  6_34.d  CMakeLists.txt  Makefile
CMakeProjects/Chapter6/ex6_34/buildMGW/: 6_34.sln  6_34.vcxproj  6_34.vcxproj.filters  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
CMakeProjects/Chapter6/ex6_34/buildMGW/6_34.dir/Debug/: 6_34.exe.recipe  6_34.ilk
CMakeProjects/Chapter6/ex6_34/buildMGW/6_34.dir/Debug/6_34.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CMakeProjects/Chapter6/ex6_34/buildMGW/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
CMakeProjects/Chapter6/ex6_34/buildMGW/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
CMakeProjects/Chapter6/ex6_34/buildMGW/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
CMakeProjects/Chapter6/ex6_34/buildMGW/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
CMakeProjects/Chapter6/ex6_34/buildMinGW/: CMakeCache.txt  Makefile  cmake_install.cmake
CMakeProjects/Chapter6/ex6_40/: 6_40.cpp  6_40.d  CMakeLists.txt  Makefile
CMakeProjects/Chapter6/ex6_40/buildMGW/: CMakeCache.txt  Makefile  cmake_install.cmake
CMakeProjects/Chapter6/ex6_45greaterCommonDeleter/: 6_45.cpp  6_45.d  CMakeLists.txt  Makefile
CMakeProjects/Chapter6/ex6_45greaterCommonDeleter/buildMGW/: Makefile  cmake_install.cmake  config.h
CMakeProjects/Chapter6/ex6_46/: 6_46.cpp  6_46.d  CMakeLists.txt  Makefile  config.h
CMakeProjects/Chapter6/ex6_46/buildMGW/: CMakeCache.txt  Makefile  cmake_install.cmake
CMakeProjects/Chapter8/8_25labirint/: 8_25.cpp  8_25.d  CMakeLists.txt  Makefile  config.h  config.h.in
CMakeProjects/Chapter8/8_25labirint/buildMGW/: CMakeCache.txt  Makefile  cmake_install.cmake
CMakeProjects/Chapter8/8_37/: 8_37.cpp  8_37.d  CMakeLists.txt  Makefile  config.h
CMakeProjects/Chapter8/8_37/buildMGW/: CMakeCache.txt  Makefile  cmake_install.cmake
CMakeProjects/Chapter8/8_37/buildMGW/.cmake/api/v1/reply/: cache-v2-c69e06b6c2e1d5c6de5a.json  cmakeFiles-v1-37033b0e1e2a3f58a575.json  codemodel-v2-5261bfa90044e0ebd1ee.json  index-2023-01-05T16-07-00-0622.json  target-8_37-7e60a1af159942319d8d.json
CMakeProjects/Chapter8/8_44/: 8_44.cpp  8_44.d  CMakeLists.txt  Makefile
CMakeProjects/Chapter8/8_44/buildMGW/: CMakeCache.txt  Makefile  cmake_install.cmake
CMakeProjects/Chapter8/ex8_17hareTirtle/: 8_17.cpp  8_17.d  CMakeLists.txt  Makefile
CMakeProjects/Chapter8/ex8_17hareTirtle/buildMGW/: CMakeCache.txt  Makefile  cmake_install.cmake
CMakeProjects/firstVersion/: CMakeLists.txt  hello.cpp
CMakeProjects/firstVersion/myLib/: CMakeLists.txt  version.cpp  version.h
CMakeProjects/otusEx4/lib/: CMakeLists.txt  lib.cpp
CMakeProjects/otusEx4/src/: CMakeLists.txt  hello.cpp
CMakeProjects/wxWidgets/cmTest3/: CMakeLists.txt
CMakeProjects/wxWidgets/helloTest1/: CMakeLists.txt  hello.cpp  hello1.cpp  test.sh
CMakeProjects/wxWidgets/helloTest1/buildN/: .ninja_deps  .ninja_log  CMakeCache.txt  Makefile  build.ninja  cmake_install.cmake  hello  hello1
CMakeProjects/wxWidgets/helloTest1/buildN/.cmake/api/v1/reply/: cache-v2-a8ec6eb39039e6e27f96.json  cmakeFiles-v1-23b71212f7da1d0cdd03.json  codemodel-v2-129e80dc3b4733762628.json  index-2023-04-29T15-42-35-0642.json  target-hello1-e05f9eb02a35404b6f6b.json
CMakeProjects/wxWidgets/helloTest1/buildW/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
Chapter12/BPCE _withCMake_var2/libBPCE/: CMakeLists.txt
Chapter12/BPCE _withCMake_var2/src/: CMakeLists.txt
Chapter12/BPCE_withCMake/lib/: CMakeLists.txt
Chapter12/BPCE_withCMake/libBPCE/: CMakeLists.txt  config.h.in
Chapter12/BPCE_withCMake/libCE/: CMakeLists.txt
(+2996 files in other folders)
